tests/cases/fail/nested_import.p4
def main() -> None:
    if True:
        import helper
